# rhino

./: .gitignore  README.md  pyproject.toml
rhino/: config.py  main.py  storage.py
rhino/mapping/: costmap.py  occupancy.py
rhino/navigation/: controller.py  explorer.py  planner.py
rhino/server/: api.py  mcp.py  state.py
rhino/viz/: rerun.py
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  styles.css  types.ts
web/src/components/: MapPane.tsx  PlanSidebar.tsx  RobotFleet.tsx  RobotPanel.tsx  Topbar.tsx
